--- a/BrightLandsWayfinding/Views/Home/Privacy.cshtml
+++ b/BrightLandsWayfinding/Views/Home/Privacy.cshtml
@@ -31,5 +31,11 @@
                 <a class="btn btn-primary" href="/Events/UserIndex">Events-Index</a>
             </div>
         </div>
+        <div class="card">
+            <h4 class="card-header">Licence</h4>
+            <div class="card-body">
+                Copyright &copy; <span style="display:inline" id="copy-year"></span> a template by <a style="display:inline" class="text-primary" href="https://themefisher.com" target="_blank">Themefisher</a> & was edited by Casus group 14 @Html.Raw("@")ZuydHogeschool. <a style ="display:inline" href="~/assets/LICENSE">READ LICENSE</a>
+            </div>
+        </div>
     </div>
 </div>
