Updated Small Bug Fixes
Bug Fixes in Some Views and Controllers

--- a/BrightLandsWayfinding/Views/MapRoutes/Details.cshtml
+++ b/BrightLandsWayfinding/Views/MapRoutes/Details.cshtml
@@ -45,11 +45,11 @@
                 {
                     <div class="row">
                                     <div class="col-6">
-                                        <a asp-controller="Stories" asp-action="Details" asp-route-id="@s.ID">@s.Description</a> 
+                                        <a asp-controller="Steps" asp-action="Details" asp-route-id="@s.ID">@s.Description</a> 
                                     </div>
                                     <div class="col-4">
-                                        <a asp-controller="Stories" asp-action="Edit" asp-route-id="@s.ID">Edit</a>  |
-                                        <a asp-controller="Stories" asp-action="Delete" asp-route-id="@s.ID">Delete</a> 
+                                        <a asp-controller="Steps" asp-action="Edit" asp-route-id="@s.ID">Edit</a>  |
+                                                    <a asp-controller="Steps" asp-action="Delete" asp-route-id="@s.ID">Delete</a> 
                                     </div>
                     </div> 
 
