--- a/BrightLandsWayfinding/Views/Steps/Index.cshtml
+++ b/BrightLandsWayfinding/Views/Steps/Index.cshtml
@@ -29,7 +29,7 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.MapRoute.ID)
+                @Html.DisplayFor(modelItem => item.MapRoute.Description)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
